Fix overflow

--- a/app/simulateur/simulateur.module.css
+++ b/app/simulateur/simulateur.module.css
@@ -1,15 +1,22 @@
 .shadow {
   position: absolute;
   z-index: -1;
+  pointer-events: none;
   top: 0;
   right: 0;
-  width: 120%;
-  height: 60%;
-  transform: translate(40%, -20%);
+  width: 50%;
+  height: 420px;
+}
+.shadow::before {
+  content: "";
+  position: absolute;
+  top: -80px;
+  right: -50%;
+  width: 200%;
+  height: 100%;
   background: radial-gradient(
     50% 50% at 50% 50%,
     rgba(143, 205, 255, 0.2) 0%,
     rgba(143, 205, 255, 0) 100%
   );
-  pointer-events: none;
 }
